adicionado form.html

--- a/form.html
+++ b/form.html
@@ -430,7 +430,7 @@ include 'conecta.php';
             </div>
           </div>
 
-        </div>
+        </div>-->
         <!-- /.container-fluid -->
 
 
